testing initial dt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -366,6 +366,7 @@ list(APPEND COMPILER_SRCS ${RELAY_QNN_SRCS})
 tvm_file_glob(GLOB DATATYPE_SRCS src/target/datatype/*.cc)
 list(APPEND COMPILER_SRCS ${DATATYPE_SRCS})
 list(APPEND COMPILER_SRCS "src/target/datatype/myfloat/myfloat.cc")
+list(APPEND COMPILER_SRCS "src/target/datatype/diff_float/diff_float.cc")
 
 tvm_file_glob(GLOB RUNTIME_SRCS
   src/runtime/*.cc
